[tool.poetry]
name = "pulsepause"
version = "1.0"
description = ""
authors = ["kloeffler95 <kevin.loeffler@colorado.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
yarppg = {git = "https://github.com/SamProell/yarppg.git"}
pystray = "^0.19.5"
pillow = "^11.1.0"
cx-freeze = "^7.2.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
